# abbrhelper

./: .gitignore  CMakeLists.txt
scripts/: helper.py
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  resources.qrc  utils.cpp  utils.hpp
